Jul 16 2003  2.9.1  Added carrier 802.11b+ for future use
Jul 14 2003  2.9.1  Fixed configure on OSX to enable viha correctly
Jul 13 2003  2.9.1  Fixed 'Linksys' SSID in ap_manuf
Jul 11 2003  2.9.1  Fixed initialization of some fields in kis_win in panels
                    Merged patch from Ron for openbsd APM battery support
Jul 09 2003  2.9.1  Tweaked configure script to disable pcap and enable viha on
                     OSX installs.
                    Added line wrapping to alerts and status window
Jul 05 2003  2.9.1  Added fatal condition if channel lists are empty
                    Tweaked packet.h to like newer and older gccs again
Jul 04 2003  2.9.1  Added caching of client IP data
Jul 03 2003  2.9.1  Totally revamped mac-masking code and manufacturer
                     matching code.
                    Added environment var KISMET_CONF to change the directory
                     kismet looks in for config and manuf files by default
Jun 22 2003  2.9.1  Added panels UI display of current channel
                    Added some other paths to kismet_monitor for binaries
                    Fixed prism2_avs capture source
                    Added decrypted network tag to display
                    Changed tcpclient.cc to use fixed field lists to make it
                     compatable with other versions of kismet_server
Jun 21 2003  2.9.1  Added tcpclient hooks for cardlist
Jun 20 2003  2.9.1  Added CARD protocol to report card info to client
                    Minor tweak to how children link to GPS
Jun 18 2003  2.9.1  Actually fixed GPS
                    Fixed packet/network delta calculations (Sushila)
Jun 17 2003  2.9.1  Hopefully fixed gps with new packet path
Jun 15 2003  2.9.1  Fixed to handle ENOBUF cleanly in IPC
                    Rolled in OSX/Viha support from Sushila :)
                    Updated docs to reflect Viha support
Jun 14 2003  2.9.1  Tweaked queuing order of fatal text messages in IPC